--- a/modules/canbus/vehicle/BUILD
+++ b/modules/canbus/vehicle/BUILD
@@ -48,6 +48,7 @@ cc_library(
         "//modules/canbus/vehicle/wey:wey_vehicle_factory",
         "//modules/canbus/vehicle/zhongyun:zhongyun_vehicle_factory",
         "//modules/canbus/vehicle/neolix_edu:neolix_edu_vehicle_factory",
+        "//modules/canbus/vehicle/fortuna:fortuna_vehicle_factory",
         "//modules/common/util:factory",
     ],
 )
