Added fortuna production radar system to apollo perception

--- a/modules/perception/onboard/component/BUILD
+++ b/modules/perception/onboard/component/BUILD
@@ -86,6 +86,7 @@ cc_library(
         "fusion_component.cc",
         "lidar_output_component.cc",
         "radar_detection_component.cc",
+        "fortuna_radar_detection_component.cc",
         "recognition_component.cc",
         "segmentation_component.cc",
     ],
@@ -94,6 +95,7 @@ cc_library(
         "lidar_inner_component_messages.h",
         "lidar_output_component.h",
         "radar_detection_component.h",
+        "fortuna_radar_detection_component.h",
         "recognition_component.h",
         "segmentation_component.h",
     ],
@@ -168,6 +170,8 @@ cc_library(
         "//modules/perception/radar/lib/tracker/matcher:hm_matcher",
         "//modules/transform:tf2_buffer_lib",
         "//modules/transform/proto:transform_proto",
+        "//modules/perception/onboard/proto:fortuna_radar_component_config_proto",
+        "//modules/canbus/proto:canbus_proto",
         "@eigen",
     ],
     alwayslink = True,
