--- a/modules/perception/onboard/proto/BUILD
+++ b/modules/perception/onboard/proto/BUILD
@@ -15,6 +15,20 @@ proto_library(
 )
 
 cc_proto_library(
+    name = "fortuna_radar_component_config_proto",
+    deps = [
+        ":fortuna_radar_component_config_proto_lib",
+    ],
+)
+
+proto_library(
+    name = "fortuna_radar_component_config_proto_lib",
+    srcs = [
+        "fortuna_radar_component_config.proto",
+    ],
+)
+
+cc_proto_library(
     name = "fusion_component_config_proto",
     deps = [
         ":fusion_component_config_proto_lib",
