planner: 11km/h reference speed, no overtake

--- a/modules/planning/conf/planning.conf
+++ b/modules/planning/conf/planning.conf
@@ -1,13 +1,19 @@
 --flagfile=/apollo/modules/common/data/global_flagfile.txt
 --traffic_rule_config_filename=/apollo/modules/planning/conf/traffic_rule_config.pb.txt
---planning_upper_speed_limit=20.00
---default_cruise_speed=11.18
+--nouse_cyber_time
+--planning_upper_speed_limit=3
 --ignore_overlapped_obstacle=true
 --prioritize_change_lane
 --min_length_for_lane_change=5.0
 --nouse_multi_thread_to_add_obstacles
 --enable_multi_thread_in_dp_st_graph
 --use_osqp_optimizer_for_reference_line
+--default_cruise_speed=3
+#--enable_scenario_side_pass
+#--enable_scenario_traffic_light
+
+
+# --export_chart=true
 
 # --smoother_config_filename=/apollo/modules/planning/conf/spiral_smoother_config.pb.txt
 # --smoother_config_filename=/apollo/modules/planning/conf/qp_spline_smoother_config.pb.txt
@@ -22,6 +28,7 @@
 # --use_gear_shift_trajectory=true
 # --enable_parallel_hybrid_a=true
 --export_chart=true
+
 
 # --use_front_axe_center_in_path_planning=true
 # --obstacle_lon_start_buffer=0.4
@@ -47,3 +54,4 @@
 
 --use_smoothed_dp_guide_line=true
 --use_soft_bound_in_nonlinear_speed_opt=false
+--enable_nonscenario_side_pass=false
