fixed build errors due to moving to the new repo

--- a/modules/canbus/proto/BUILD
+++ b/modules/canbus/proto/BUILD
@@ -14,7 +14,8 @@ proto_library(
         "ch.proto",
         "chassis.proto",
         "chassis_detail.proto",
-        "devkit.proto"
+        "devkit.proto",
+        "neolix_edu.proto",
         "ge3.proto",
         "lexus.proto",
         "transit.proto",
