--- a/modules/drivers/imar/imar_sdk/BUILD
+++ b/modules/drivers/imar/imar_sdk/BUILD
@@ -1,24 +1,24 @@
-load("//tools:cpplint.bzl", "cpplint")
+# load("//tools:cpplint.bzl", "cpplint")
 
-package(default_visibility = ["//visibility:public"])
+# package(default_visibility = ["//visibility:public"])
 
-cc_library(
-    name = "imar_sdk",
-    srcs = [
-        "insClass.cpp",
-        "crc16calc.cpp",
-        "ixcomhandler.cpp",
-        "ixcomparser.cpp"
-    ],
-    hdrs = [
-        "insClass.h",
-        "crc16calc.h",
-        "ixcomhandler.h",
-        "XCOMtypes.h",
-        "ixcomparser.h",
-    ],
-    deps = [
-    ],
-)
+# cc_library(
+#     name = "imar_sdk",
+#     srcs = [
+#         "insClass.cpp",
+#         "crc16calc.cpp",
+#         "ixcomhandler.cpp",
+#         "ixcomparser.cpp"
+#     ],
+#     hdrs = [
+#         "insClass.h",
+#         "crc16calc.h",
+#         "ixcomhandler.h",
+#         "XCOMtypes.h",
+#         "ixcomparser.h",
+#     ],
+#     deps = [
+#     ],
+# )
 
-cpplint()
+# cpplint()
