--- a/tools/bazel.rc
+++ b/tools/bazel.rc
@@ -63,12 +63,12 @@ build --proto_toolchain_for_cc="@com_google_protobuf//:cc_toolchain"
 # build with profiling
 build:cpu_prof --linkopt=-lprofiler
 
-build --copt="-Werror=sign-compare"
-build --copt="-Werror=return-type"
-build --copt="-Werror=reorder"
-build --copt="-Werror=unused-variable"
-build --copt="-Werror=unused-but-set-variable"
-build --copt="-Werror=switch"
+# build --copt="-Werror=sign-compare"
+# build --copt="-Werror=return-type"
+# build --copt="-Werror=reorder"
+# build --copt="-Werror=unused-variable"
+# build --copt="-Werror=unused-but-set-variable"
+# build --copt="-Werror=switch"
 
 # Strict check on type conversion.
 # absl/strings/str_cat.h breaks the rule.
@@ -79,3 +79,4 @@ build --copt="-Werror=switch"
 build --cxxopt="-std=c++1y"
 # Enable colorful output of GCC
 # build --cxxopt="-fdiagnostics-color=always"
+
