empty miqp planner based on lattice planner

--- a/modules/planning/planner/BUILD
+++ b/modules/planning/planner/BUILD
@@ -37,6 +37,7 @@ cc_library(
         "//modules/common/status",
         "//modules/common/util",
         "//modules/planning/planner/lattice:lattice_planner",
+        "//modules/planning/planner/miqp:miqp_planner",
         "//modules/planning/planner/navi:navi_planner",
         "//modules/planning/planner/public_road:public_road_planner",
         "//modules/planning/planner/rtk:rtk_planner",
