--- a/modules/planning/planner/miqp/BUILD
+++ b/modules/planning/planner/miqp/BUILD
@@ -16,8 +16,9 @@ cc_library(
         "//modules/planning/constraint_checker:collision_checker",
         "//modules/planning/planner",
         "//modules/planning/proto:planning_proto",
-        "@planner_miqp//src:behavior_miqp",
-        "@planner_miqp//common/dynamic:dynamic_conversion",
+        #"@planner_miqp//src:behavior_miqp",
+        #"@planner_miqp//common/dynamic:dynamic_conversion",
+        "@bark_project//bark/models/behavior/idm:idm_classic",
     ],
 )
 
