--- a/modules/planning/planner/miqp/BUILD
+++ b/modules/planning/planner/miqp/BUILD
@@ -18,7 +18,7 @@ cc_library(
         "//modules/planning/proto:planning_proto",
         #"@planner_miqp//src:behavior_miqp",
         #"@planner_miqp//common/dynamic:dynamic_conversion",
-        "@bark_project//bark/models/behavior/idm:idm_classic",
+        #"@bark_project//bark/models/behavior/idm:idm_classic",
     ],
 )
 
