integrated miqp planner c api

--- a/modules/planning/planner/miqp/BUILD
+++ b/modules/planning/planner/miqp/BUILD
@@ -17,7 +17,9 @@ cc_library(
         "//modules/planning/planner",
         "//modules/planning/planner/lattice:lattice_planner",
         "//modules/planning/proto:planning_proto",
-        "@bark//:core",
+        # "@bark//:core",
+        "@miqp_planner//:miqp_c_api",
+        "@cplex",
     ],
 )
 
