--- a/WORKSPACE.in
+++ b/WORKSPACE.in
@@ -325,33 +325,40 @@ new_local_repository(
     path = "/apollo/bark/include",
 )
 
-## miqp planner
-#local_repository(
-#    name = "planner_miqp",
-#    path = "/apollo/miqp_logical_constraints",
-#    )
+new_local_repository(
+    name = "miqp_planner",
+    build_file = "miqp/miqp.BUILD",
+    path = "/apollo/miqp",
+)
 
-#new_local_repository(
-#    name = "local_cplex_installation",
-#    path = "/opt/ibm/ILOG/CPLEX_Studio1210/opl",
-#    build_file_content = """
-#cc_library(
-#    name = "cplex",
-#    srcs = [
-#        "lib/x86-64_linux/static_pic/libopl.a",
-#        "lib/x86-64_linux/static_pic/libiljs.a",
-#        "lib/x86-64_linux/static_pic/libilocplex.a",
-#        "lib/x86-64_linux/static_pic/libcp.a",
-#        "lib/x86-64_linux/static_pic/libconcert.a",
-#        "bin/x86-64_linux/libcplex12100.so",
-#        "bin/x86-64_linux/libicuuc.so",
-#        "bin/x86-64_linux/libicui18n.so",
-#        "bin/x86-64_linux/libicuio.so",
-#        "bin/x86-64_linux/libicudata.so",
-#        "bin/x86-64_linux/liboplnl1.so",
-#    ],
+new_local_repository(
+    name = "cplex",
+    path = "/apollo/cplex/opl",
+    build_file_content = """
+cc_library(
+    name = "cplex",
+    srcs = [
+        "lib/x86-64_linux/static_pic/libopl.a",
+        "lib/x86-64_linux/static_pic/libiljs.a",
+        "lib/x86-64_linux/static_pic/libilocplex.a",
+        "lib/x86-64_linux/static_pic/libcp.a",
+        "lib/x86-64_linux/static_pic/libconcert.a",
+        "bin/x86-64_linux/libcplex12100.so",
+        "bin/x86-64_linux/libicuuc.so",
+        "bin/x86-64_linux/libicui18n.so",
+        "bin/x86-64_linux/libicuio.so",
+        "bin/x86-64_linux/libicudata.so",
+        "bin/x86-64_linux/liboplnl1.so",
+        "bin/x86-64_linux/libicuuc.so.55",
+        "bin/x86-64_linux/libicui18n.so.55",
+        "bin/x86-64_linux/libicuio.so.55",
+        "bin/x86-64_linux/libicudata.so.55",
+        "bin/x86-64_linux/liboplnl1.so.12",
+    ],
 #    hdrs = glob(["include/**/*.h"]),
-#    visibility = ["//visibility:public"],
+    visibility = ["//visibility:public"],
 #    includes = ["include"],
-#)""",
-#    )
+)""",
+    )
+
+
