--- a/modules/planning/conf/planning.conf
+++ b/modules/planning/conf/planning.conf
@@ -11,7 +11,15 @@
 --default_cruise_speed=3
 #--enable_scenario_side_pass
 #--enable_scenario_traffic_light
+
+# in hz, 1/expected cycle time of the planner
 --planning_loop_rate=1
+
+# in nr pts, nr of points the trajectory stitcher keeps as history
+--trajectory_stitching_preserved_length=20
+
+# view debug messages ==4
+--v=4
 
 
 # --export_chart=true
