introduce trajectory_stitching_advance_time parameter

--- a/modules/planning/conf/miqp_planning.conf
+++ b/modules/planning/conf/miqp_planning.conf
@@ -14,6 +14,9 @@
 # view debug messages ==4
 --v=4
 
+# shift the trajectory start point into the future
+--trajectory_stitching_advance_time=1.0
+
 #--enable_scenario_side_pass
 #--enable_scenario_traffic_light
 #--ignore_overlapped_obstacle=true
