--- a/modules/planning/conf/miqp_planning.conf
+++ b/modules/planning/conf/miqp_planning.conf
@@ -15,7 +15,7 @@
 --v=3
 
 # shift the trajectory start point into the future
---trajectory_stitching_advance_time=3.5
+--trajectory_stitching_advance_time=2
 
 #--enable_scenario_side_pass
 #--enable_scenario_traffic_light
