wheelbase_add and destination_distance_stop_threshold as parameters

--- a/modules/planning/conf/miqp_planning.conf
+++ b/modules/planning/conf/miqp_planning.conf
@@ -9,13 +9,16 @@
 --planning_loop_rate=1
 
 # in nr pts, nr of points the trajectory stitcher keeps as history
---trajectory_stitching_preserved_length=20
+--trajectory_stitching_preserved_length=10
 
 # view debug messages ==4
---v=3
+--v=4
 
 # shift the trajectory start point into the future
 --trajectory_stitching_advance_time=2
+
+# distance the stitcher will not continue the old traj but start a new one
+--replan_longitudinal_distance_threshold=6
 
 #--enable_scenario_side_pass
 #--enable_scenario_traffic_light
