--- a/modules/perception/production/data/perception/lidar/models/pointcloud_preprocessor/velodyne32/pointcloud_preprocessor.conf
+++ b/modules/perception/production/data/perception/lidar/models/pointcloud_preprocessor/velodyne32/pointcloud_preprocessor.conf
@@ -1,5 +1,5 @@
 filter_naninf_points: false
-filter_nearby_box_points: false
+filter_nearby_box_points: true
 box_forward_x: 2.0
 box_backward_x: -2.0
 box_forward_y: 2.0
