Autobox Control: Collect and report timing errors + visualization in controldesk, modify traj timing while standstill

--- a/modules/autobox_control/.gitignore
+++ b/modules/autobox_control/.gitignore
@@ -2,3 +2,13 @@
 *.mexw64
 *.mexw64.pdb
 slprj/*
+AutoboxModel_rti1401/*
+AutoboxModel.dsbuildinfo
+AutoboxModel.map
+AutoboxModel.ppc
+AutoboxModel.ppc.hex
+AutoboxModel.ppc.srec
+AutoboxModel.trc
+AutoboxModel.trz
+AutoboxModel_usr.c
+autoboxmodel.sdf
