no stitching during standstill

--- a/modules/planning/conf/miqp_planning.conf
+++ b/modules/planning/conf/miqp_planning.conf
@@ -20,6 +20,9 @@
 # distance the stitcher will not continue the old traj but start a new one
 --replan_longitudinal_distance_threshold=9
 
+# velocity threshold for reinit in standstill
+--replan_standstill_velocity_threshold=0.3
+
 #--enable_scenario_side_pass
 #--enable_scenario_traffic_light
 #--ignore_overlapped_obstacle=true
