added nlopt build files for bazel, minimal integration of nlopt interface

--- a/WORKSPACE.in
+++ b/WORKSPACE.in
@@ -337,3 +337,9 @@ new_local_repository(
     build_file = "cplex/cplex.BUILD",
     )
 
+new_local_repository(
+    name = "nlopt",
+    path = "/usr/local",
+    build_file = "third_party/nlopt.BUILD",
+)
+
