added planning init point to smoother api

--- a/modules/planning/planner/miqp/BUILD
+++ b/modules/planning/planner/miqp/BUILD
@@ -17,6 +17,7 @@ cc_library(
         "//modules/planning/planner",
         "//modules/planning/planner/lattice:lattice_planner",
         "//modules/planning/proto:planning_proto",
+        ":trajectory_smoother_nlopt",
         "@miqp_planner//:miqp_c_api",
         "@cplex",
     ],
