implemented arbitrary number of fake obstacles

--- a/modules/fake_obstacle/proto/BUILD
+++ b/modules/fake_obstacle/proto/BUILD
@@ -13,5 +13,6 @@ proto_library(
         "fake_obstacle_conf.proto",
     ],
     deps = [
+        "//modules/perception/proto:perception_proto_lib",
     ],
 )
