reuse old trajectory if current planning failed

--- a/modules/planning/conf/miqp_planning.conf
+++ b/modules/planning/conf/miqp_planning.conf
@@ -23,6 +23,9 @@
 # velocity threshold for reinit in standstill
 --replan_standstill_velocity_threshold=0.3
 
+# if false, we send the previous traj again if possible
+--always_update_trajectory=false
+
 #--enable_scenario_side_pass
 #--enable_scenario_traffic_light
 #--ignore_overlapped_obstacle=true
