--- a/modules/planning/conf/miqp_planning.conf
+++ b/modules/planning/conf/miqp_planning.conf
@@ -29,6 +29,8 @@
 #--prioritize_change_lane
 #--min_length_for_lane_change=5.0
 
+# minimum l-distance to nudge a static obstacle (meters)
+--static_obstacle_nudge_l_buffer=1.0
 
 # --smoother_config_filename=/apollo/modules/planning/conf/spiral_smoother_config.pb.txt
 # --smoother_config_filename=/apollo/modules/planning/conf/qp_spline_smoother_config.pb.txt
