setting miqp timing paramters after real world tests

--- a/modules/planning/conf/miqp_planning.conf
+++ b/modules/planning/conf/miqp_planning.conf
@@ -6,7 +6,7 @@
 --default_cruise_speed=3
 
 # in hz, 1/expected cycle time of the planner
---planning_loop_rate=3
+--planning_loop_rate=2
 
 # in nr pts, nr of points the trajectory stitcher keeps as history
 --trajectory_stitching_preserved_length=10
@@ -15,7 +15,7 @@
 --v=3
 
 # shift the trajectory start point into the future
---trajectory_stitching_advance_time=2
+--trajectory_stitching_advance_time=1.25
 
 # distance the stitcher will not continue the old traj but start a new one
 --replan_longitudinal_distance_threshold=9
