seperated miqp planner from common functionality and smoother

--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -3,6 +3,21 @@ load("//tools:cpplint.bzl", "cpplint")
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
+    name = "fortiss_common",
+    hdrs = ["fortiss_common.h"],
+    srcs = ["fortiss_common.cc"],
+    copts = [
+        "-DMODULE_NAME=\\\"planning\\\"",
+    ],
+    deps = [
+        ":reference_line_info",
+        "//modules/planning/common/smoothers:trajectory_smoother_nlopt",
+        "//modules/planning/common/trajectory:discretized_trajectory",
+        "//modules/common/vehicle_state:vehicle_state_provider",
+    ],
+)
+
+cc_library(
     name = "indexed_list",
     hdrs = ["indexed_list.h"],
     copts = [
