--- a/modules/planning/planner/miqp/BUILD
+++ b/modules/planning/planner/miqp/BUILD
@@ -17,42 +17,11 @@ cc_library(
         "//modules/planning/planner",
         "//modules/planning/planner/lattice:lattice_planner",
         "//modules/planning/proto:planning_proto",
-        ":trajectory_smoother_nlopt",
+        "//modules/planning/common:fortiss_common",
         "@miqp_planner//:miqp_c_api",
         "@cplex",
     ],
     data = ["@miqp_planner//:cplex_models_filegroup"],
-)
-
-cc_library(
-    name = "trajectory_smoother_nlopt",
-    srcs = ["trajectory_smoother_nlopt.cc"],
-    hdrs = ["trajectory_smoother_nlopt.h"],
-    deps = [
-        "//cyber/common:log",
-        "//modules/planning/common/trajectory:publishable_trajectory",
-        "//modules/planning/common/trajectory:discretized_trajectory",
-        "//modules/common/time:time",
-        "//cyber/logger:logger_util",
-        "@nlopt",
-        "@eigen",
-    ]
-)
-
-filegroup(
-    name = "miqp_testdata",
-    srcs = glob([
-        "miqp_testdata/**",
-    ]),
-)
-
-cc_test(
-    name = "trajectory_smoother_nlopt_test",
-    srcs = ["trajectory_smoother_nlopt_test.cc"],
-    deps = ["@gtest//:main",
-            ":trajectory_smoother_nlopt",
-            "//modules/common/math:geometry"],
-    data = [":miqp_testdata"]
 )
 
 cpplint()
