--- a/modules/planning/common/smoothers/BUILD
+++ b/modules/planning/common/smoothers/BUILD
@@ -15,4 +15,35 @@ cc_library(
     ],
 )
 
+cc_library(
+    name = "trajectory_smoother_nlopt",
+    srcs = ["trajectory_smoother_nlopt.cc"],
+    hdrs = ["trajectory_smoother_nlopt.h"],
+    deps = [
+        "//cyber/common:log",
+        "//modules/planning/common/trajectory:publishable_trajectory",
+        "//modules/planning/common/trajectory:discretized_trajectory",
+        "//modules/common/time:time",
+        "//cyber/logger:logger_util",
+        "@nlopt",
+        "@eigen",
+    ]
+)
+
+filegroup(
+    name = "miqp_testdata",
+    srcs = glob([
+        "miqp_testdata/**",
+    ]),
+)
+
+cc_test(
+    name = "trajectory_smoother_nlopt_test",
+    srcs = ["trajectory_smoother_nlopt_test.cc"],
+    deps = ["@gtest//:main",
+            ":trajectory_smoother_nlopt",
+            "//modules/common/math:geometry"],
+    data = [":miqp_testdata"]
+)
+
 cpplint()
