initial impl smoother only planner

--- a/modules/planning/planner/BUILD
+++ b/modules/planning/planner/BUILD
@@ -47,6 +47,7 @@ cc_library(
         "//modules/planning/planner/public_road:public_road_planner",
         "//modules/planning/planner/rtk:rtk_planner",
         "//modules/planning/proto:planning_proto",
+        "//modules/planning/planner/reference_tracking:reference_tracking_planner",
         "//modules/planning/planner/bark_rl_wrapper:bark_rl_planner"]
         + select({":_planner_miqp" : ["//modules/planning/planner/miqp:miqp_planner"], "//conditions:default": []}),
 )
